package dev.kaldiroglu.dp.structural.adapter.electricity.pluggable.electricity.abstractOperations;

public interface TurkishPowerSource {

    void turnOn();

    void turnOff();
}
