package dev.kaldiroglu.dp.structural.adapter.electricity.pluggable.electricity.abstractOperations;

public final class UKPowerSource {

    public void flipToggle() {
        System.out.println("UK source: toggle flipped (230V / 50Hz)");
    }
}
