package dev.kaldiroglu.dp.structural.adapter.electricity.pluggable.electricity.abstractOperations;

public final class USPowerSource {

    public void pushSwitch() {
        System.out.println("US source: switch pushed (110V / 60Hz)");
    }
}
